# tenor

./: .flake8  .gitattributes  MANIFEST.in  README.md  codecov.yml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_test.yml
docs/: index.rst  requirements.txt
docs/api/: modules.rst
mezzo-soprano/: _version.py  model.py
mezzo_soprano/: __init__.py  _version.py  model.py
mezzo_soprano/utils/: configuration.py  logging.py
tenor/: __init__.py
tenor/utils/: configuration.py
