
[metadata]
name = tenor
description = Python Boilerplate contains all the boilerplate you need to create a Python package.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/tenor
author_email = jburgess@mpe.mpg.de
author = J. Michael Burgess
requires_python = >=3.7.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/tenor/issues
    Source Code = https://github.com/grburgess/tenor




[options]
packages = find_namespace:
package_dir =
    = .
include_package_data = True


install_requires =
    numpy
    matplotlib
    rich
    omegaconf


tests_require =
    pytest
    pytest-codecov



[options.packages.find]
where = .

[options.package_data]
tenor.data =
    *




[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=tenor --cov-report=term -ra --ignore=tenor/test --ignore=tenor/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = tenor/test 
norecursedirs = tenor/test


[versioneer]
VCS=git
style=pep440
versionfile_source=tenor/_version.py
versionfile_build=tenor/_version.py
tag_prefix=v
parentdir_prefix=tenor-

